Added post votes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 </head>
 <body class="vertical-center body-background">
 
-<%= yield %>
+  <%= render 'layouts/header' %>
+  <%= yield %>
 
 </body>
 </html>
