--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,16 @@
 <html>
 <head>
   <title>Rails Basic Template</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <script type="text/javascript" src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
   
   <%= csrf_meta_tags %>
 </head>
 <body class="vertical-center body-background">
 
-  <%= render 'layouts/header' %>
+  <!-- if you dont need to pass any variables, you can omit `:partial =>` -->
+  <%= render :partial => 'layouts/header' %>
   <%= yield %>
 
 </body>
