--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,13 +15,14 @@
 <!-- We want a form here -->
 
 <!-- empty comment object -->
-<%= form_for @comment do |f| %>
+<%= form_for @comment, :remote => true do |f| %>
   <%= f.label :content %>
   <%= f.text_field :content %>
 
   <%= f.text_field :post_id, :value => @post.id, :hidden => true %>
 
   <%= f.submit "Submit new comment" %>
+  <div id="error_message"></div>
 <% end %>
 
 <!-- I want to list out all the comments made for this post -->
@@ -34,12 +35,11 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="comments_list">
     <% @post.comments.each do |comment| %>
-      <tr>
-        <td><%= comment.content %></td>
-        <td><%= comment.user.email %></td>
-      </tr>
+      <!-- if you need to pass any variables, you cannot omit `:partial =>` -->
+      <!-- locals means local variables -->
+      <%= render :partial => "comment", :locals => {:comment => comment} %>
     <% end %>
   </tbody>
 </table>
